exclude-k8s/files-service-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-service-dep
  annotations:
    # Jaeger tracing sidecar
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files-service
  template:
    metadata:
      labels:
        app: files-service
    spec:
      restartPolicy: Always
      containers:
        - name: files-service
          image: giopeto/e-shop-files-service:dev-1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: files-service-svc
spec:
  selector:
    app: files-service
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8082
      # Port to forward to inside the pod
      targetPort: 8082
      # Port accessible outside cluster
      nodePort: 30103
  type: LoadBalancer
