exclude-k8s/e-shop-gateway-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/proxy-body-size: "51m"
    # nginx.nginx.org/proxy-connect-timeout: "30s"
    # nginx.nginx.org/proxy-read-timeout: "20s"
    # nginx.nginx.org/client-max-body-size: "51m"
spec:
  rules:
    - host: service.k8s-eshop.io
      http:
        paths:
          ### Back-end applications
          - path: /api/authentication-svc(/|$)(.*)
            backend:
              serviceName: authentication-service-svc
              servicePort: 8080
          - path: /api/store-svc(/|$)(.*)
            backend:
              serviceName: store-service-svc
              servicePort: 8081
          - path: /api/files-svc(/|$)(.*)
            backend:
              serviceName: files-service-svc
              servicePort: 8082
          - path: /api/basket-svc(/|$)(.*)
            backend:
              serviceName: basket-service-svc
              servicePort: 8084
          - path: /api/payment-svc(/|$)(.*)
            backend:
              serviceName: payment-service-svc
              servicePort: 8085
          - path: /api/nodejs-socket-svc(/|$)(.*)
            backend:
              serviceName: nodejs-socket-service-svc
              servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: e-shop-gateway-ingress-frontend-ops
  annotations:
    # nginx.ingress.kubernetes.io/proxy-body-size: "51m"
    # nginx.nginx.org/proxy-connect-timeout: "30s"
    # nginx.nginx.org/proxy-read-timeout: "20s"
    # nginx.nginx.org/client-max-body-size: "51m"
spec:
  rules:
    ### Front-end applications
    - host: admin.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ui-admin-svc
              servicePort: 80
    - host: k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ui-client-svc
              servicePort: 80
    ### Ops applications
    # Nexus repository
    - host: nexus.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus-svc
              servicePort: 80
    # Jenkins CI/CD
    - host: jenkins.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-svc
              servicePort: 80
    # SonarQube Code Quality and Security
    - host: sonar.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: sonar-svc
              servicePort: 80
    # Spring boot admin server
    - host: spring-boot-admin-server.k8s-eshop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-service
              servicePort: 8083
